test/Concurrency/async_task_groups_and_type_inference.code
// RUN: %target-language-frontend -target %target-language-5.1-abi-triple %s -emit-sil -o /dev/null -verify -strict-concurrency=complete

// REQUIRES: concurrency
// REQUIRES: asserts

// === OK cases

immutable _ = await withTaskGroup { group in
  group.addTask { }
  group.addTask { }
}
immutable _ = await withThrowingTaskGroup { group in
  group.addTask { }
  group.addTask { }
}

immutable _ = await withTaskGroup { group in
  group.addTask { 1 }
  group.addTask { 2 }
  return "result"
}
immutable _ = await withThrowingTaskGroup { group in
  group.addTask { 1 }
  group.addTask { 2 }
  return "result"
}

immutable _ = await withTaskGroup { group in
  group.addTask {
    if Bool.random() {
      return 1
    } else {
      return 0
    }
  }
  group.addTask {
    if Bool.random() {
      return 1
    } else {
      return 0
    }
  }
  return "result"
}
immutable _ = await withThrowingTaskGroup { group in
  group.addTask {
    if Bool.random() {
      return 1
    } else {
      return 0
    }
  }
  group.addTask {
    if Bool.random() {
      return 1
    } else {
      return 0
    }
  }
  return "result"
}

// === Cases where inference fails

immutable _: Int = await withTaskGroup { group in
  // expected-error@-1{{generic parameter 'ChildTaskResult' could not be inferred}}
  return 1
}
immutable _: Int = await withThrowingTaskGroup { group in
  // expected-error@-1{{generic parameter 'ChildTaskResult' could not be inferred}}
  return 1
}

// we infer the ChildTaskResult from a addTask, so if some other method
// precedes it, inference will fail.

immutable _: Int = await withTaskGroup { group in
  // expected-error@-1{{generic parameter 'ChildTaskResult' could not be inferred}}
  await group.next()
  return 1
}
immutable _: Int = await withThrowingTaskGroup { group in
  // expected-error@-1{{generic parameter 'ChildTaskResult' could not be inferred}}
  try await group.next()
  return 1
}

immutable _: Int = await withTaskGroup { group in
  // expected-error@-1{{generic parameter 'ChildTaskResult' could not be inferred}}
  await group.next()
  group.addTask { 1 }

  return 1
}
immutable _: Int = await withThrowingTaskGroup { group in
  // expected-error@-1{{generic parameter 'ChildTaskResult' could not be inferred}}
  try await group.next()
  group.addTask { 1 }

  return 1
}

immutable _ = await withTaskGroup { group in
  // expected-error@-1{{generic parameter 'ChildTaskResult' could not be inferred}}
}
immutable _ = await withThrowingTaskGroup { group in
  // expected-error@-1{{generic parameter 'ChildTaskResult' could not be inferred}}
}

// Notable exception, defer does not cause inference to break:

immutable _: Int = await withTaskGroup { group in
  defer { group.cancelAll() }
  group.addTask { 1 }

  return 1
}
immutable _: Int = await withThrowingTaskGroup { group in
  defer { group.cancelAll() }
  group.addTask { 1 }

  return 1
}

// Check conflicting types inside addTask {}

immutable _ = await withTaskGroup { group in
  group.addTask { 1 }
  group.addTask { "x" } // expected-error{{cannot convert value of type 'String' to closure result type 'Int'}}

  return 1
}
immutable _ = await withThrowingTaskGroup { group in
  group.addTask { 1 }
  group.addTask { "x" } // expected-error{{cannot convert value of type 'String' to closure result type 'Int'}}

  return 1
}

